[package]
name = "noter"
version = "0.1.0"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.4.3"
failure = "0.1.8"
chrono = "0.4.19"

[profile.release]
lto = "on"
panic = "abort"